# 3DCurvesHierarchy

./: CMakeLists.txt  CMakePresets.json  main.cpp
Curves/: CMakeLists.txt  curves.cpp  curves.h
